DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Dec-10-2010 patrick     Changed keyboard and mouse event time stamps for Cocoa
                        to be measured in milliseconds to match X11 and Win32.
                        Submitted by Doug McCorkle.
Dec-09-2010 patrick     Fixed serialization of gadget::Glove angle values.
                        Submitted by Carsten Neumann.
Dec-09-2010 patrick     Fixed problems with shutdown of the VRPN driver.
                        Submitted by Carsten Neumann.

[2.0.0 released - 11.27.2010]==================================================
Sep-05-2010 patrick     Added forward compatibility interfaces for device
                        data types and gadget::TypedProxy<T>.
Jun-19-2010 patrick     Reverted the change to gadgt::AnalogProxy that allowed
                        access to the raw device data. This change broke the
                        use of analog devices in a cluster configuration.
                        NEW VERSION: 1.3.32
Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
                        devices.
                        Submitted by Carsten Neumann.
                        NEW VERSION: 1.3.31
May-08-2010 patrick     Changed window/mouse interaction for the X11 case.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.3.30
Apr-28-2010 patrick     Changed window/mouse interaction on Mac OS X.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.3.29
Mar-25-2010 patrick     Changed window/mouse interaction on Windows.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.3.28
Feb-13-2010 patrick     Fixed mouse lock state tracking in input areas. The
                        pure virtual methods in gadget::InputArea are now